k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prompt-app-service
spec:
  type: LoadBalancer
  selector:
    app: prompt-app
  ports:
    - port: 80
      targetPort: 5000
